-
Bug
-
Resolution: Done
-
P1: Critical
-
6.1.0 FF
-
None
-
-
21ab254164ab0891e12dbd037fc4e163ff9f6e9d (qt/qtdatavis3d/dev) 502857f03fc79ba8997e18c012257dc5c020d7cf (qt/qtdatavis3d/6.1)
/Users/qt/work/qt/qtdatavis3d/src/datavisualization/utils/qutils.h:44:30: error: unused function 'qDefaultSurfaceFormat' [-Werror,-Wunused-function]
- is required for
-
QTBUG-88612 Migrate Qt Data Visualization to Qt 6
-
- Closed
-
For Gerrit Dashboard: QTBUG-91053 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
333736,4 | Fix macOS build that has -Wunused-function as error | dev | qt/qtdatavis3d | Status: MERGED | +2 | 0 |
333947,5 | Fix macOS build that has -Wunused-function as error | 6.1 | qt/qtdatavis3d | Status: MERGED | +2 | 0 |