Fix macOS build that has -Wunused-function as error

Clang may interpret static inline function as unused, although
it should not. Pragma it out for clang.

Fixes: QTBUG-91053
Change-Id: I8fd8bec5236752189deff8a2f6ceb62e572dca30
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
(cherry picked from commit 21ab254164ab0891e12dbd037fc4e163ff9f6e9d)
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>