examples/datavisualization/qmlsurfacelayers/main.cpp
@@ -42,7 +42,7 @@ int main(int argc, char *argv[])
     QQuickView viewer;
 
     // Enable antialiasing in direct rendering mode
-    viewer.setFormat(qDefaultSurfaceFormat());
+    viewer.setFormat(qDefaultSurfaceFormat(true));
 
     // The following are needed to make examples run without having to install the module
     // in desktop environments.
